[gd_scene load_steps=17 format=3 uid="uid://dla7e8n5xwb8p"]

[ext_resource type="PackedScene" uid="uid://dtr0i11vgkia1" path="res://Scenes/Map/FullMap/DemoHoleMap.tscn" id="1_5xh7a"]
[ext_resource type="PackedScene" uid="uid://s32ljyhnwxak" path="res://Scenes/MapStaticNode/Hole.tscn" id="2_4cwnb"]
[ext_resource type="PackedScene" uid="uid://d1ra53galag05" path="res://Scenes/PlayerTools/DaggerDrop.tscn" id="2_4sh3e"]
[ext_resource type="PackedScene" uid="uid://cc1m2a1obsyn4" path="res://addons/fpc/character.tscn" id="3_y0sav"]
[ext_resource type="Script" path="res://Scenes/Player/ActionComponent.gd" id="4_x0ck7"]
[ext_resource type="Script" path="res://Scenes/Player/LootComponent.gd" id="5_3d5mj"]
[ext_resource type="Script" path="res://Scenes/Demo/MobDemo/AttackComponent.gd" id="6_o14x1"]
[ext_resource type="Script" path="res://Scenes/Grid/GridToken.gd" id="7_diano"]
[ext_resource type="Script" path="res://Scenes/Demo/CameraRotationRestrictor.gd" id="8_wwtwg"]
[ext_resource type="Script" path="res://Scenes/Demo/GridRestrictor.gd" id="9_frfek"]
[ext_resource type="PackedScene" uid="uid://bmcknkhmj376d" path="res://Scenes/Enemies/FreeMob.tscn" id="11_lt17m"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_y4bo1"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_uexpf"]
sky_material = SubResource("ProceduralSkyMaterial_y4bo1")

[sub_resource type="Environment" id="Environment_e3elk"]
background_mode = 2
sky = SubResource("Sky_uexpf")
tonemap_mode = 2
tonemap_exposure = 2.0
ssao_enabled = true
glow_enabled = true
glow_intensity = 2.0
glow_blend_mode = 1
fog_mode = 1
fog_light_color = Color(0, 0, 1, 1)
fog_light_energy = 16.0
fog_sun_scatter = 1.0
fog_density = 1.0
fog_aerial_perspective = 1.0
fog_height = 1024.0
fog_depth_begin = 3.5
volumetric_fog_enabled = true
volumetric_fog_density = 0.3005

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_bwaw0"]
dof_blur_far_enabled = true
dof_blur_far_distance = 6.0
dof_blur_near_enabled = true
dof_blur_near_distance = 0.01
dof_blur_near_transition = -1.0
dof_blur_amount = 0.2

[sub_resource type="NavigationMesh" id="NavigationMesh_dqf6q"]
vertices = PackedVector3Array(3, 0.5, 4.25, 7.25, 0.5, 4.25, 7.5, 0.5, 2.25, 2.75, 0.5, 2.25, 12.25, 0.5, -2, -2, 0.5, -2, 12.25, 0.5, 2.25, -2, 0.5, 2.25, -2.25, 5.5, 7.25, 2.5, 5.5, 7.5, 2.5, 5.5, 2.75, -2.25, 5.5, 2.75, 7.75, 5.5, 2.75, 7.75, 5.5, 7.5, 12.25, 5.5, 7.25, 12.25, 5.5, 2.75, 7.25, 0.5, 16, 7.25, 0.5, 11, 3.5, 0.5, 11, 3, 0.5, 15.75, 7.25, 0.5, 9.25, 3.25, 0.5, 9.5, 2.25, 5.5, 9.5, 2.25, 5.5, 10.5, 7.75, 5.5, 10.5, 7.75, 5.5, 9.5, -2.25, 5.5, 12.75, -2.25, 5.5, 17.5, 2.5, 5.5, 17.5, 2.5, 5.5, 12.5, 7.75, 5.5, 17.5, 12.25, 5.5, 17.5, 12.25, 5.5, 12.75, 7.75, 5.5, 12.5, 3, 0.5, 17.5, 7.5, 0.5, 18, 12.25, 0.5, 32.25, 12.25, 0.5, 18, 2.5, 0.5, 18, -2, 0.5, 32.25, -2, 0.5, 18)
polygons = [PackedInt32Array(0, 3, 1), PackedInt32Array(1, 3, 2), PackedInt32Array(3, 5, 2), PackedInt32Array(2, 5, 4), PackedInt32Array(4, 6, 2), PackedInt32Array(3, 7, 5), PackedInt32Array(11, 10, 8), PackedInt32Array(8, 10, 9), PackedInt32Array(15, 14, 12), PackedInt32Array(12, 14, 13), PackedInt32Array(18, 17, 19), PackedInt32Array(19, 17, 16), PackedInt32Array(20, 21, 1), PackedInt32Array(1, 21, 0), PackedInt32Array(21, 18, 19), PackedInt32Array(19, 0, 21), PackedInt32Array(25, 24, 22), PackedInt32Array(22, 24, 23), PackedInt32Array(27, 26, 28), PackedInt32Array(28, 26, 29), PackedInt32Array(31, 30, 32), PackedInt32Array(32, 30, 33), PackedInt32Array(19, 16, 34), PackedInt32Array(34, 16, 35), PackedInt32Array(35, 37, 36), PackedInt32Array(34, 35, 38), PackedInt32Array(38, 35, 39), PackedInt32Array(39, 35, 36), PackedInt32Array(39, 40, 38)]
geometry_parsed_geometry_type = 1
agent_radius = 0.25

[node name="MobDemo" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_e3elk")
camera_attributes = SubResource("CameraAttributesPractical_bwaw0")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_dqf6q")

[node name="DemoHoleMap" parent="NavigationRegion3D" instance=ExtResource("1_5xh7a")]

[node name="Hole" parent="NavigationRegion3D/DemoHoleMap" instance=ExtResource("2_4cwnb")]

[node name="Dagger" parent="." instance=ExtResource("2_4sh3e")]
transform = Transform3D(-0.0736385, 0, 0.997285, 0, 1, 0, -0.997285, 0, -0.0736385, -1.72667, 1.11611, 0.597652)

[node name="Dagger2" parent="." instance=ExtResource("2_4sh3e")]
transform = Transform3D(-0.0736385, 0, 0.997285, 0, 1, 0, -0.997285, 0, -0.0736385, -1.72667, 1.11611, 7.10323)

[node name="Character" parent="." node_paths=PackedStringArray("map", "environment") instance=ExtResource("3_y0sav")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.838799, 0)
map = NodePath("../NavigationRegion3D/DemoHoleMap")
environment = NodePath("../WorldEnvironment")

[node name="ActionComponent" type="Node3D" parent="Character" node_paths=PackedStringArray("lootComponent", "attackComponent")]
script = ExtResource("4_x0ck7")
lootComponent = NodePath("../LootComponent")
attackComponent = NodePath("../AttackComponent")

[node name="LootComponent" type="Node3D" parent="Character"]
script = ExtResource("5_3d5mj")

[node name="Label" type="Label" parent="Character/LootComponent"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -58.52
offset_right = 20.0
offset_bottom = -35.52
grow_horizontal = 2
grow_vertical = 0
text = "Take"

[node name="AttackComponent" type="Node3D" parent="Character"]
script = ExtResource("6_o14x1")

[node name="GridToken" type="Node3D" parent="Character"]
script = ExtResource("7_diano")

[node name="CameraRotationRestrictor" type="Node" parent="Character"]
script = ExtResource("8_wwtwg")

[node name="GridRestrictor" type="Node" parent="Character" node_paths=PackedStringArray("gridToken")]
script = ExtResource("9_frfek")
gridToken = NodePath("../GridToken")

[node name="FreeMob" parent="." instance=ExtResource("11_lt17m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.63, 0, 26.298)
